# pycountry

./: .pre-commit-config.yaml  HISTORY.txt  Makefile  generate.py  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/pycountry/: __init__.py  db.py
src/pycountry/tests/: test_general.py
